# Document-Tracker

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yml
src/: database.py  main.py  models.py  notifications.py  scheduler.py
src/views/: add_document.py  dashboard.py  setting.py
tests/: conftest.py  test_database.py  test_scheduler.py
